# genfs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml
examples/: README.md  bare-ext4.toml  bare-fat32.toml  bios-legacy-disk.toml  efi-disk.toml  format_empty_ext2.rs  inspect_gpt.rs  raspberry-pi.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ext_list_corrupt_dir.rs  ext_open.rs
src/: analyze.rs  concurrent.rs  error.rs  format_opts.rs  fuse_adapter.rs  inspect.rs  lib.rs  macroman.rs  merge.rs  path_style.rs  repack.rs  resfork.rs  spec.rs
src/block/: crash_inject.rs  diskcopy.rs  file.rs  memory.rs  mod.rs  sliced.rs
src/block/dmg/: base64.rs  codec.rs  encrypted.rs  mish.rs  mod.rs  plist.rs
src/block/dmg/testdata/: pattern_512_i7p3.bz2
src/block/qcow2/: header.rs  l1l2.rs  mod.rs  refcount.rs
src/compression/: mod.rs  stream.rs
src/fs/: dir_batch.rs  mod.rs  rootdevs.rs
src/fs/apfs/: btree.rs  checksum.rs  fstree.rs  jrec.rs  mod.rs  obj.rs  omap.rs  rw.rs  snap.rs  spaceman.rs  superblock.rs  write.rs
src/fs/archive/: arc.rs  cab.rs  lha.rs  lzx.rs  mod.rs  rar.rs  reader.rs  sevenz.rs  sit.rs  tree.rs  writer.rs
src/fs/archive/ar/: mod.rs  scan.rs  write.rs
src/fs/archive/cab/: folder.rs  mod.rs  scan.rs
src/fs/archive/cpio/: mod.rs  scan.rs  write.rs
src/fs/archive/testdata/: amiga_store.lzx  arc_m1.arc  arc_store.arc  bzip2.7z  comp5.lzh  comp5.rar  copy_hc.7z  copy_nohc.7z  deflate.7z  lzma.7z  lzma2.7z  solid5.rar  solidmulti5.rar  store0.lzh  store1.lzh  store2.lzh  store5.rar  test.sit
src/fs/archive/zip/: encoding.rs  mod.rs  scan.rs  write.rs
src/fs/exfat/: boot.rs  dir.rs  fat.rs  format.rs  mod.rs  rw.rs  upcase.rs
src/fs/ext/: build_plan.rs  constants.rs  csum.rs  dir.rs  extent.rs  group.rs  htree.rs  inode.rs  jbd2.rs  layout.rs  mod.rs  rw.rs  superblock.rs  xattr.rs
src/fs/f2fs/: checkpoint.rs  constants.rs  dir.rs  file.rs  format.rs  inode.rs  mod.rs  nat.rs  rw.rs  superblock.rs  write.rs
src/fs/fat/: boot.rs  dir.rs  fsinfo.rs  handle.rs  mod.rs  mutate.rs  table.rs
src/fs/grf/: crypt.rs  encoding.rs  header.rs  mod.rs  table.rs  writer.rs
src/fs/hfs/: macroman.rs  mod.rs
src/fs/hfs_plus/: attributes.rs  btree.rs  catalog.rs  decmpfs.rs  extents.rs  handle.rs  journal.rs  mod.rs  volume_header.rs  writer.rs
src/fs/iso9660/: directory.rs  el_torito.rs  joliet.rs  mod.rs  rock_ridge.rs  vd.rs  writer.rs
src/fs/ntfs/: attribute.rs  attribute_list.rs  boot.rs  compression.rs  format.rs  index.rs  logfile.rs  mft.rs  mod.rs  run_list.rs  rw.rs  secure.rs  tests.rs  upcase_gen.rs  writer.rs
src/fs/squashfs/: directory.rs  file.rs  fragment.rs  idtable.rs  inode.rs  metablock.rs  mod.rs  writer.rs  xattr.rs
src/fs/tar/: header.rs  mod.rs  pax.rs  stream.rs
src/fs/xfs/: bmbt.rs  dir.rs  dir_build.rs  format.rs  inode.rs  journal.rs  mod.rs  rw.rs  superblock.rs  symlink.rs  write.rs  xattr.rs  xattr_leaf.rs
src/part/: apm.rs  gpt.rs  mbr.rs  mod.rs
tests/: apfs_external.rs  archive_external.rs  cli_external.rs  clone_api.rs  compression_external.rs  dmg_external.rs  exfat_external.rs  ext2_external.rs  ext3_external.rs  ext4_external.rs  f2fs_external.rs  fat32_external.rs  fs_fuzz.rs  fuse_external.rs  grf_external.rs  hfs_plus_external.rs  iso9660_external.rs  merge_external.rs  ntfs_external.rs  partition_external.rs  qcow2_external.rs  reopen_mutate.rs  repack_unified.rs  spec_external.rs  squashfs_external.rs  xfs_external.rs
