[package]
name = "fstool"
version = "0.4.7"
edition = "2024"
rust-version = "1.85"
description = "Build disk images and filesystems (ext2/3/4, MBR, GPT) from a directory tree and TOML spec, in the spirit of genext2fs."
license = "MIT"
repository = "https://github.com/KarpelesLab/fstool"
readme = "README.md"
keywords = ["filesystem", "ext4", "ext2", "gpt", "image"]
categories = ["filesystem", "command-line-utilities"]

[lib]
name = "fstool"
path = "src/lib.rs"

[[bin]]
name = "fstool"
path = "src/bin/fstool/main.rs"

[features]
# Compression codecs for SquashFS reads and `.tar.<algo>` streaming I/O.
# Enabled by default; disable with `default-features = false` and pick
# a subset if you want to slim the binary or avoid a C-bundled build.
#
# Archive backends (zip / cpio / ar) are always compiled — they add no new
# dependencies (zip's DEFLATE rides the `gzip` feature; cpio/ar need no
# codec). The detection-only scaffolds (7z / rar / arc / lha / lzx / cab /
# sit) are likewise always present; when a pure-Rust decoder is wired for
# one, it gains its own optional dependency behind a per-format feature
# here, matching the codec pattern above.
default = ["gzip", "xz", "lzma", "lz4", "zstd", "lzo", "dmg-bzip2", "dmg-lzfse", "dmg-encrypted"]
# gzip/zlib/xz/zstd are served by `compcol` (uniform codec crate).
# `flate2` is still pulled by `gzip` because the zip, DMG, and HFS+
# decmpfs paths use it directly (migrated to compcol in a follow-up).
# `lzma` stays on `lzma-rs`: compcol 0.4.0's `.lzma` (alone) codec isn't
# liblzma-interoperable yet (compcol#14). lz4/lzo stay on their own crates
# until compcol exposes raw single-block + canonical-frame codecs
# (compcol #9 / #10).
gzip = ["dep:flate2", "dep:compcol", "compcol/gzip", "compcol/zlib"]
xz = ["dep:compcol", "compcol/xz"]
lzma = ["dep:lzma-rs"]
lz4 = ["dep:lz4_flex"]
zstd = ["dep:compcol", "compcol/zstd"]
lzo = ["dep:minilzo-rs"]
# DMG chunk codecs beyond the always-available zero / raw / zlib / ADC set.
# bzip2-rs is a pure-Rust decoder, lzfse_rust is a pure-Rust LZFSE
# decoder; both gated so a slim build can drop them.
dmg-bzip2 = ["dep:bzip2-rs"]
dmg-lzfse = ["dep:lzfse_rust"]
# Password-protected DMG read support (`encrcdsa` v2). Pulls in the
# RustCrypto AES/DES/CBC/HMAC/SHA1/PBKDF2 crates — all pure Rust. Gated
# so a slim build can drop them.
dmg-encrypted = [
    "dep:aes",
    "dep:cbc",
    "dep:cipher",
    "dep:des",
    "dep:hmac",
    "dep:sha1",
    "dep:pbkdf2",
]
# FUSE adapter: enables the `fstool mount` subcommand which exposes an
# ext{2,3,4} image as a userspace filesystem via libfuse (Linux) or
# macFUSE (macOS). Off by default so the core build doesn't need a C
# FUSE library on the host; opt in with `--features fuse`.
fuse = ["dep:fuser"]

[dependencies]
thiserror = "2"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
crc32fast = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
crc32c = "0.6.8"
# Unicode NFD + default case folding for the APFS drec hash function.
# Volumes formatted with APFS_INCOMPAT_NORMALIZATION_INSENSITIVE
# (the macOS default for user data volumes) store drec keys with a
# 22-bit CRC32C of the NFD-normalised (optionally case-folded) name;
# our writer computes it via these crates. Both unicode-normalization
# and caseless are maintained under unicode-rs and MIT/Apache.
unicode-normalization = "0.1"
caseless = "0.2"
# CP949 (Korean) ↔ UTF-8 for the GRF backend (Gravity Ragnarok archives
# store filenames in CP949). encoding_rs's `EUC_KR` label is the WHATWG
# alias that covers CP949 — the spec mapping is identical in practice.
encoding_rs = "0.8"
# Used to spool compressed tar streams to a temp file when reading or
# writing `.tar.gz` / `.tar.zst` / etc., so we don't have to hold the
# whole archive in RAM. Cheap dep; already in dev-dependencies.
tempfile = "3"

# Compression codecs — all optional and feature-gated. Pure-rust where
# possible (flate2 via miniz_oxide, lz4_flex, lzma-rs); zstd and lzo
# pull in bundled C source.
# compcol: uniform no_std codec collection. Serves gzip/zlib/xz/lzma/zstd;
# `std` is always on (for the `io` Read/Write adapters), per-algorithm
# features are added by fstool's own `gzip`/`xz`/`lzma`/`zstd` features.
compcol = { version = "0.4", optional = true, default-features = false, features = ["std"] }
flate2 = { version = "1", optional = true, default-features = false, features = ["rust_backend"] }
lzma-rs = { version = "0.3", optional = true }
lz4_flex = { version = "0.11", optional = true, default-features = false, features = ["std", "safe-encode", "safe-decode", "frame"] }
"minilzo-rs" = { version = "0.6", optional = true }

# DMG codec deps. bzip2-rs is decode-only pure Rust; lzfse_rust is a
# pure-Rust LZFSE encoder + decoder. Both opt-in via dmg-bzip2 /
# dmg-lzfse features so a build without DMG support can drop them.
bzip2-rs = { version = "0.1", optional = true }
lzfse_rust = { version = "0.2", optional = true }

# Encrypted DMG (encrcdsa v2) deps — all pure-Rust from the RustCrypto
# organization. Opt-in via the `dmg-encrypted` feature.
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true, features = ["std"] }
cipher = { version = "0.4", optional = true, features = ["block-padding"] }
des = { version = "0.8", optional = true }
hmac = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true, default-features = false, features = ["hmac"] }

# FUSE adapter — Linux uses libfuse, macOS uses macFUSE. Off by default
# (see the `fuse` feature). `fuser` is the maintained successor to
# `fuse-rs` and tracks the libfuse 3.x ABI. We enable the default
# `libfuse` feature so the build links against the system FUSE
# library; running `cargo build --features fuse` therefore requires
# libfuse-dev (Linux) or macFUSE (macOS) installed on the host.
fuser = { version = "0.16", optional = true, features = ["libfuse"] }

# Needed on Unix for the BLKGETSIZE64 / DKIOCGETBLOCKCOUNT ioctls used to
# query the size of a block device, plus the O_EXCL open flag that refuses
# devices with a mounted partition.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
