[package]
name = "fstool"
version = "0.4.7"
edition = "2024"
rust-version = "1.85"
description = "Build disk images and filesystems (ext2/3/4, MBR, GPT) from a directory tree and TOML spec, in the spirit of genext2fs."
license = "MIT"
repository = "https://github.com/KarpelesLab/fstool"
readme = "README.md"
keywords = ["filesystem", "ext4", "ext2", "gpt", "image"]
categories = ["filesystem", "command-line-utilities"]

[lib]
name = "fstool"
path = "src/lib.rs"

[[bin]]
name = "fstool"
path = "src/bin/fstool/main.rs"

[features]
# Compression codecs for SquashFS reads and `.tar.<algo>` streaming I/O.
# Enabled by default; disable with `default-features = false` and pick
# a subset if you want to slim the binary or avoid a C-bundled build.
#
# Archive backends (zip / cpio / ar) are always compiled — they add no new
# dependencies (zip's DEFLATE rides the `gzip` feature; cpio/ar need no
# codec). The remaining detection-only scaffolds (7z / rar / arc / lha /
# sit) are likewise always present; when a pure-Rust decoder is wired for
# one, it gains its own optional dependency behind a per-format feature
# here, matching the codec pattern above. `cab` and `amiga-lzx` are such
# readers.
default = ["gzip", "xz", "lzma", "lz4", "zstd", "lzo", "cab", "amiga-lzx", "dmg-bzip2", "dmg-lzfse", "dmg-encrypted"]
# Every codec is served by `compcol` (one uniform crate): gzip/zlib/deflate/
# xz/lzma/zstd/lz4/lzo, plus the CAB + Amiga-LZX archive codecs and the DMG
# bzip2/lzfse decoders. The `gzip` feature also covers zip DEFLATE, DMG zlib,
# and HFS+ decmpfs; lz4 uses compcol's raw block (SquashFS) + canonical frame
# (tar); lzo uses compcol's raw LZO1X block; lzma is the `.lzma` alone codec.
gzip = ["dep:compcol", "compcol/gzip", "compcol/zlib", "compcol/deflate"]
xz = ["dep:compcol", "compcol/xz"]
lzma = ["dep:compcol", "compcol/lzma"]
lz4 = ["dep:compcol", "compcol/lz4"]
# Microsoft Cabinet (.cab) reader: Store/MSZIP/LZX/Quantum folders decode
# via compcol. Read-only.
cab = ["dep:compcol", "compcol/deflate", "compcol/lzx", "compcol/quantum"]
# Amiga LZX (.lzx) reader: Store + LZX (compcol amiga_lzx) groups. Read-only.
amiga-lzx = ["dep:compcol", "compcol/amiga_lzx"]
zstd = ["dep:compcol", "compcol/zstd"]
lzo = ["dep:compcol", "compcol/lzo"]
# DMG chunk codecs beyond the always-available zero / raw / zlib / ADC set,
# decoded via compcol (bzip2 + lzfse decoders). Gated so a slim build can
# drop them. (`lzfse_rust` is a dev-dependency used only to generate the
# lzfse test vector — compcol's LZFSE is decode-only.)
dmg-bzip2 = ["dep:compcol", "compcol/bzip2"]
dmg-lzfse = ["dep:compcol", "compcol/lzfse"]
# Password-protected DMG read support (`encrcdsa` v2). Pulls in the
# RustCrypto AES/DES/CBC/HMAC/SHA1/PBKDF2 crates — all pure Rust. Gated
# so a slim build can drop them.
dmg-encrypted = [
    "dep:aes",
    "dep:cbc",
    "dep:cipher",
    "dep:des",
    "dep:hmac",
    "dep:sha1",
    "dep:pbkdf2",
]
# FUSE adapter: enables the `fstool mount` subcommand which exposes an
# ext{2,3,4} image as a userspace filesystem via libfuse (Linux) or
# macFUSE (macOS). Off by default so the core build doesn't need a C
# FUSE library on the host; opt in with `--features fuse`.
fuse = ["dep:fuser"]

[dependencies]
thiserror = "2"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
crc32fast = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
crc32c = "0.6.8"
# Unicode NFD + default case folding for the APFS drec hash function.
# Volumes formatted with APFS_INCOMPAT_NORMALIZATION_INSENSITIVE
# (the macOS default for user data volumes) store drec keys with a
# 22-bit CRC32C of the NFD-normalised (optionally case-folded) name;
# our writer computes it via these crates. Both unicode-normalization
# and caseless are maintained under unicode-rs and MIT/Apache.
unicode-normalization = "0.1"
caseless = "0.2"
# CP949 (Korean) ↔ UTF-8 for the GRF backend (Gravity Ragnarok archives
# store filenames in CP949). encoding_rs's `EUC_KR` label is the WHATWG
# alias that covers CP949 — the spec mapping is identical in practice.
encoding_rs = "0.8"
# Used to spool compressed tar streams to a temp file when reading or
# writing `.tar.gz` / `.tar.zst` / etc., so we don't have to hold the
# whole archive in RAM. Cheap dep; already in dev-dependencies.
tempfile = "3"

# Compression codecs — all optional and feature-gated. Pure-rust where
# possible (flate2 via miniz_oxide, lz4_flex, lzma-rs); zstd and lzo
# pull in bundled C source.
# compcol: uniform no_std codec collection serving gzip/zlib/deflate/xz/zstd
# /lz4/lzo plus the CAB codecs. `std` is always on (for the `io` Read/Write
# adapters); per-algorithm features are added by fstool's feature flags.
compcol = { version = "0.4", optional = true, default-features = false, features = ["std"] }

# Encrypted DMG (encrcdsa v2) deps — all pure-Rust from the RustCrypto
# organization. Opt-in via the `dmg-encrypted` feature.
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true, features = ["std"] }
cipher = { version = "0.4", optional = true, features = ["block-padding"] }
des = { version = "0.8", optional = true }
hmac = { version = "0.12", optional = true }
sha1 = { version = "0.10", optional = true }
pbkdf2 = { version = "0.12", optional = true, default-features = false, features = ["hmac"] }

# FUSE adapter — Linux uses libfuse, macOS uses macFUSE. Off by default
# (see the `fuse` feature). `fuser` is the maintained successor to
# `fuse-rs` and tracks the libfuse 3.x ABI. We enable the default
# `libfuse` feature so the build links against the system FUSE
# library; running `cargo build --features fuse` therefore requires
# libfuse-dev (Linux) or macFUSE (macOS) installed on the host.
fuser = { version = "0.16", optional = true, features = ["libfuse"] }

# Needed on Unix for the BLKGETSIZE64 / DKIOCGETBLOCKCOUNT ioctls used to
# query the size of a block device, plus the O_EXCL open flag that refuses
# devices with a mounted partition.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
env_logger = "0.11"
# Test-only: an independent LZFSE *encoder* to generate fixtures that the
# production `compcol` LZFSE decoder must round-trip (compcol's LZFSE is
# decode-only). Not linked into the shipped binary.
lzfse_rust = "0.2"
